# qti-emissions-controller

./: .deploy-trigger  .gitignore  Anchor.toml  BUG_BOUNTY.md  CHANGELOG.md  DEPLOY.md  README.md  RPRK_MODEL_SPEC.md  SECURITY.md  monthly_nav_report.md  package.json  tsconfig.json
.github/workflows/: anchor-deploy.yml  ci.yml  devnet-deploy.yml  release.yml  secret-scan.yml
docs/: GINI_GATE_INTEGRATION.md  MULTISIG_MIGRATION.md  SQUADS_MAINNET_DEPLOY_RUNBOOK.md  TESTNET_DEPLOYMENT.md
programs/qti_developer_credits/: Cargo.toml  LEAN4_SPEC.md
programs/qti_developer_credits/src/: lib.rs
programs/qti_emissions_controller/: Cargo.toml
programs/qti_emissions_controller/src/: lib.rs
reports/: squads_nav_report_2026_07.md  v3-g4-bug-bounty-report.md
reports/nav/: .gitkeep
reports/templates/: monthly_nav_report.md
scripts/: emit_rewards.ts  initialize_config.ts  setup-localnet.sh
tests/: qti_emissions_controller.ts
